fix(KSTIP-1987): setup service & Resource test
